<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/main_background">

        <TextView
            android:id="@+id/textview_main_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_heading"
            android:textSize="@dimen/textsize_main_textview"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.106" />

        <EditText
            style="@style/edittext_main"
            android:id="@+id/edittext_main_loaisanpham"
            android:layout_marginTop="@dimen/margintop_main_edittextfirst"
            android:inputType="textPersonName"
            android:hint="@string/main_loaisanpham"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_main_heading" />

        <EditText
            style="@style/edittext_main"
            android:id="@+id/edittext_main_tensanpham"
            android:inputType="textPersonName"
            android:hint="@string/main_tensanpham"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_main_loaisanpham" />

        <EditText
            style="@style/edittext_main"
            android:id="@+id/edittext_main_soluong"
            android:inputType="number"
            android:hint="@string/main_soluong"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_main_tensanpham" />

        <EditText
            style="@style/edittext_main"
            android:id="@+id/edittext_main_nhasanxuat"
            android:inputType="textPersonName"
            android:hint="@string/main_nhasanxuat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_main_soluong" />

        <EditText
            style="@style/edittext_main"
            android:id="@+id/edittext_main_ngaynhapkho"
            android:inputType="textPersonName"
            android:hint="@string/main_ngaynhapkho"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_main_nhasanxuat" />

        <Button
            android:id="@+id/button_main_back"
            style="@style/button_main"
            android:text="@string/main_back"
            app:layout_constraintEnd_toStartOf="@id/button_main_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_main_ngaynhapkho" />

        <Button
            android:id="@+id/button_main_confirm"
            style="@style/button_main"
            android:text="@string/main_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_main_back"
            app:layout_constraintTop_toBottomOf="@+id/edittext_main_ngaynhapkho" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
